- show last move of opponent for 2 secs (10/12/25 Martin Korous)
- workaround bug in accessing array $GLOBALS (10/12/25 Martin Korous)

1.3.2:
- fixed bug in stalemate detection (08/03/29 MS)
- added confirmation for accepting/refusing a draw (08/03/29 MS)
- arranged buttons better to prevent accidental resignation (08/02/22 MS)

1.3.1:
- highlight any saved move on reloading the board page (08/02/16 MS)
- show player names instead of full game id in browser title (08/02/16 MS)
- replaced move edit with action button row (08/02/16 MS)
- updated README: keep original directory names when renaming resources for
  security reasons (08/01/08 FB)

1.3:
- highlight source/destination tile of move (07/12/26 MS)
- updated security information in README (07/12/25 MS)
- user related data stored in new directory occ-data/users (07/12/25 MS)
- write access locking (07/12/25 MS)
- accurate page titles to distinguish multiple browser tabs (07/12/24 MS)
- more contrast for text (07/12/24 MS)
- bug fixed in search page (own username could not be selected) (07/12/17 MS)

1.3beta:
- major redesign of source code (07/11-07/12 MS)
- added release info element to login screen
- updated documentation (README and help)
- round don't floor rating values
- build-time for each page
- rankings may now be created by all criteria not just rating
- enhanced themability (and renamed wcg to default)
- deleting (now aborting) a game does not count as win
- removed forum and PGN viewing 
- rearranged components of chessboard page
- simplified some text messages (07/10/21 MS)

1.2.9:
- don't show link to section 'Input Mode' for archived games (07/04/28 MS)
- new section "New Game" for starting games (07/04/28 MS)
- do not allow HTML tags in comments (07/04/28 MS)
- fixed some typos and improved some descriptions (07/04/28 MS)
- show old comment to remember what a conversation is about (07/04/28 MS)

1.2.8:
- added activity column to rankings (06/12/25 MS)